5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1637_869.log
== TEST (2019-04-09 11:01:59) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200)
	mensagem = float(input(round(200 * 0.05)))
	

-- ERROR:
File "XXXX", line 3
    if (x>=200)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:12) 
-- CODE:
x = float(input("preço sem desconto: "))

if ("x>=200")
	mensagem = float(input(round(200 * 0.05)))
	

-- ERROR:
File "XXXX", line 3
    if ("x>=200")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:21) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x > = 200)
	mensagem = float(input(round(200 * 0.05)))
	

-- ERROR:
File "XXXX", line 3
    if (x > = 200)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:30) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x >= 200)
	mensagem = float(input(round(200 * 0.05)))
	

-- ERROR:
File "XXXX", line 3
    if (x >= 200)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:49) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	mensagem = float(input(round(200 * 0.05)))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = float(input(round(200 * 0.05)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:52) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	mensagem = float(round(x - (200 * 0.05)))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = float(input(round(200 * 0.05)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:03) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	mensagem = float(round(x - (200 * 0.05,2)))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = float(round(x - (200 * 0.05,2)))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:36) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	mensagem = float(round(x-(200 * 0.05,2)))
else: 
	print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = float(round(x-(200 * 0.05,2)))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:05:27) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	mensagem = float(input((round(x-(200 * 0.05,2)))
else: 
	print(x)
	

-- ERROR:
File "XXXX", line 5
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:06:14) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	mensagem = float(input((round(x-(x * 0.05,2)))
else: 
	print(x)
	

-- ERROR:
File "XXXX", line 5
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:54) 
-- CODE:
x = float(input("preço sem desconto: "))

if (x>=200):
	print(round(x - (x * 0.05,2)))
else: 
	print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x - (x * 0.05,2)))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:03) 
-- CODE:
x = float(input("preco sem desconto: "))

if (x>=200):
	print(round(x - (x * 0.05,2)))
else: 
	print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x - (x * 0.05,2)))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:32) 
-- CODE:
x = float(input("preco sem desconto: "))

if (x>=200):
	float(round(x - (x * 0.05,2)))
else: 
	print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(round(x - (x * 0.05,2)))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:41) 
-- CODE:
x = float(input("preco sem desconto: "))

if (x>=200):
	print(round(x - ((x * 0.05),2)))
else: 
	print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x - ((x * 0.05),2)))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:10:43) 
-- CODE:
x = float(input("preco sem desconto: "))

if (x>=200):
	print(round(x-(x*0.05),2))
else: 
	print(x)
	

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:10:48) 
-- CODE:
x = float(input("preco sem desconto: "))

if (x>=200):
	print(round(x-(x*0.05),2))
else: 
	print(x)
	

-- EXECUTION TIME:
0.175462
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
